314: Fix calendar z-index, login background image, main-container overflow

--- a/public/modules/users/less/_login-view-page.less
+++ b/public/modules/users/less/_login-view-page.less
@@ -6,7 +6,6 @@
   background-image: @login-auth-bg-img;
   background-size: cover;
   overflow: hidden;
-  height: 100%;
 
   &:before {
     content: '';
